--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,18 +5,43 @@
 html,
 body {
   scroll-behavior: smooth;
+  color: #475467;
 }
 
 *::-webkit-scrollbar {
   display: none;
 }
 
-/* common classes */
+/* fonts */
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+.font-inter {
+  font-family: 'Inter', sans-serif;
+}
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
+.font-roboto {
+  font-family: 'Roboto', sans-serif;
+}
 
+/* common classes */
+.text-primary {
+  color: rgba(255,170,165,1)
+}
+.bg-primary {
+  background-color: rgba(255,170,165,1)
+}
+.text-secondary {
+  color: rgba(168, 221, 230, 1)
+}
+.bg-secondary {
+  background-color: rgba(168, 221, 230, 1)
+}
+.text-black {
+  color: #475467;
+}
 
 /* responsive classes */
 .main-container {
-  @apply w-full mx-auto px-6 lg:px-2;
+  @apply w-full mx-auto lg:px-2;
 }
 @media (min-width: 576px) {
   .main-container {
