--- a/src/styles/navbar.module.css
+++ b/src/styles/navbar.module.css
@@ -1,22 +1,22 @@
 .hanimation {
-    display: inline-block;
-    position: relative;
-  }
-  
-  .hanimation::after {
-    content: '';
-    position: absolute;
-    width: 100%;
-    transform: scaleX(0);
-    height: 2px;
-    bottom: 0;
-    left: 0;
-    background-color: rgba(255,170,165,1);
-    transform-origin: bottom right;
-    transition: transform 0.25s ease-out;
-  }
-  
-  .hanimation:hover::after {
-    transform: scaleX(1);
-    transform-origin: bottom left;
-  }
+  display: inline-block;
+  position: relative;
+}
+
+.hanimation::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(255, 170, 165, 1);
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
+}
+
+.hanimation:hover::after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
