--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -101,10 +101,20 @@ body {
   padding-bottom: 50px !important;
 }
 
- .swiper-pagination {
-  position: absolute !important;
-  bottom: 70px !important;
-  left: 120px !important;
+@media screen and (max-width: 767px) {
+  .swiper-pagination {
+    position: absolute !important;
+    bottom: 70px !important;
+    left: 120px !important;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .swiper-pagination {
+    position: absolute !important;
+    bottom: 70px !important;
+    left: 120px !important;
+  }
 }
 
 
