--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+/* tan sate table style */
 
 html,
 body {
@@ -56,7 +57,9 @@ body {
   -webkit-background-clip: text;
   color: transparent;
 }
-
+.sidebarBg {
+  background-color: #ffffff;
+}
 .gradientBg {
   background: linear-gradient(248deg, #a8dde6 0.94%, #ffa5a5 100%);
 }
