--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+/* tan sate table style */
 
 html,
 body {
@@ -56,7 +57,9 @@ body {
   -webkit-background-clip: text;
   color: transparent;
 }
-
+.sidebarBg {
+  background-color: #ffffff;
+}
 .gradientBg {
   background: linear-gradient(248deg, #a8dde6 0.94%, #ffa5a5 100%);
 }
@@ -76,6 +79,38 @@ body {
 @media (min-width: 768px) {
   .main-container {
     max-width: 720px !important;
+  }
+}
+@media (min-width: 768px) and (max-width: 1024px) {
+  .dashboard-container {
+    display: flex !important;
+    flex-direction: column !important;
+    overflow-y: scroll;
+    width: 100% !important;
+  }
+  .dashboard-content {
+    width: 98% !important;
+    margin: 0 auto;
+  }
+  .new-quer-content {
+    width: 90% !important;
+  }
+  .blog-submit-btn {
+    width: 85% !important;
+    margin: 0 auto;
+    flex-direction: column !important;
+
+    /* column-gap: 11px !important; */
+    gap: 12px !important;
+  }
+  .padding-bottom {
+    padding: 6px !important;
+  }
+  .select-input {
+    width: 60% !important;
+  }
+  .dashboard-input {
+    width: 90% !important;
   }
 }
 @media (min-width: 992px) {
